--- a/Dokumentacija/PROGI_ProjektnaDokumentacija.tex
+++ b/Dokumentacija/PROGI_ProjektnaDokumentacija.tex
@@ -74,8 +74,8 @@
 
 \pagestyle{fancy}
 \lhead{Programsko inženjerstvo}
-\rhead{$<$Projektni zadatak$>$}
-\lfoot{$<$Naziv grupe$>$}
+\rhead{$<$CodeShark$>$}
+\lfoot{$<$DomeFanClub$>$}
 \cfoot{stranica \thepage/\pageref{LastPage}}
 \rfoot{\today}
 \renewcommand{\headrulewidth}{0.2pt}
@@ -90,25 +90,25 @@
 		\begin{center}
 			\vspace*{\stretch{1.0}} %u kombinaciji s ostalim \vspace naredbama definira razmak između redaka teksta
 			\LARGE Programsko inženjerstvo\\
-			\large Ak. god. 2020./2021.\\
+			\large Ak. god. 2021./2022.\\
 			
 			\vspace*{\stretch{3.0}}
 			
-			\huge $<$Naziv projekta$>$\\
-			\Large Dokumentacija, Rev. \textit{$<$1 ili 2$>$}\\
+			\huge CodeShark\\
+			\Large Dokumentacija, Rev. \textit{0.1}\\
 			
 			\vspace*{\stretch{12.0}}
 			\normalsize
-			Grupa: \textit{$<$Naziv grupe$>$}\\
-			Voditelj: \textit{$<$Ime i prezime voditelja$>$}\\
+			Grupa: \textit{DomeFanClub}\\
+			Voditelj: \textit{Marko Damjanić}\\
 			
 			
 			\vspace*{\stretch{1.0}}
-			Datum predaje: \textit{$<$dan$>$. $<$mjesec$>$. $<$godina$>$.}\\
+			Datum predaje: \textit{26. 10. 2021.}\\
 	
 			\vspace*{\stretch{4.0}}
 			
-			Nastavnik: \textit{$<$Ime i prezime nastavnika zaduženog za vašu grupu$>$}\\
+			Nastavnik: \textit{Hrvoje Nuić}\\
 		
 		\end{center}
 
