--- a/Dokumentacija/Dnevnik_promjena_dokumentacije.tex
+++ b/Dokumentacija/Dnevnik_promjena_dokumentacije.tex
@@ -12,7 +12,8 @@
 			}
 			\hline
 			\textbf{Rev.}	& \textbf{Opis promjene/dodatka} & \textbf{Autori} & \textbf{Datum}\\[3pt] \hline
-			0.1 & Napravljen predložak.	& * & 26.10.2021. 		\\[3pt] \hline 
+			0.1 & Napravljen predložak.	& * & 26.10.2021. 		\\[3pt] \hline
+			0.2 & Napravljen opis projekta	& * & 7.11.2021. 		\\[3pt] \hline 
 			
 			&  &  & \\[3pt] \hline	
 		\end{longtblr}
