dodano u 3.1 : dionici i aktori

--- a/Dokumentacija/Dnevnik_promjena_dokumentacije.tex
+++ b/Dokumentacija/Dnevnik_promjena_dokumentacije.tex
@@ -14,6 +14,7 @@
 			\textbf{Rev.}	& \textbf{Opis promjene/dodatka} & \textbf{Autori} & \textbf{Datum}\\[3pt] \hline
 			0.1 & Napravljen predložak.	& * & 26.10.2021. 		\\[3pt] \hline
 			0.2 & Napravljen opis projekta	& * & 7.11.2021. 		\\[3pt] \hline 
+			0.3 & Dodano u 3.1 : dionici i aktori & Fran Jelavić & 16.11.2021. 		\\[3pt] \hline	
 			
 			&  &  & \\[3pt] \hline	
 		\end{longtblr}
