--- a/Dokumentacija/Dnevnik_promjena_dokumentacije.tex
+++ b/Dokumentacija/Dnevnik_promjena_dokumentacije.tex
@@ -15,6 +15,7 @@
 			0.1 & Napravljen predložak.	& * & 26.10.2021. 		\\[3pt] \hline
 			0.2 & Napravljen opis projekta	& * & 7.11.2021. 		\\[3pt] \hline 
 			0.3 & Dodano u 3.1 : dionici i aktori & Fran Jelavić & 16.11.2021. 		\\[3pt] \hline	
+			0.4 & Dodano u 4 : uvod & Fran Jelavić & 16.11.2021. 		\\[3pt] \hline
 			
 			&  &  & \\[3pt] \hline	
 		\end{longtblr}
