--- a/Dokumentacija/Arhitektura.tex
+++ b/Dokumentacija/Arhitektura.tex
@@ -7,11 +7,11 @@
 		\item 	Baza podataka
 	\end{itemize}
 
-		\underline{\textit{Web preglednik}} je program koji korisniku omogućuje pregled web-stranica i multimedijskog sadržaja vezanog uz njih. Korisnik putem web preglednika šalje zahtjev web poslužitelju te mu web preglednik kao interpreter prevodi web-stranicu i njezin sadržaj u format koji je korisniku razumljiv.
-		\underline{\textit{Web poslužitelj}} temelj je rada web aplikacije te je njegov glavni zadatak omogućiti komunikaciju klijenta s aplikacijom. Komunikacija se ostvaruje preko protokola HTTP (engl. \textit{Hyper Text Transfer Protocol}), koji služi za prijenos informacija na webu. Web aplikacija se pokreće preko poslužitelja koji joj prosljeđuje zahtjev od strane korisnika.
-		\underline{\textit{Web aplikacija}} služi za obradu korisničkih zahtjeva. Ovisno o zahtjevu, web aplikacija tijekom obrade zahtjeva pristupa bazi podataka te korisniku vraća odgovor u obliku HTML (engl. \textit{HyperText Markup Language}) dokumenta koji se prikazuje preko web preglednika.
-		Codeshark web aplikacija bazirana je na programskom jeziku Python-u za razvoj \textit{backend}-a, zajedno s JavaScript-om uz biblioteku React za razvoj \textit{frontend}-a. Kao razvojno okruženje koristio se Microsoft Visual Studio.
-		Arhitektura sustava temelji se na konceptu MVC-a (Model-View-Controller). Karakteristika MVC koncepta je nezavisan razvoj pojedinih dijelova aplikacije što za posljedicu ima jednostavnije ispitivanje kao i jednostavno razvijanje i dodavanje novih svojstava u sustav.
+		\underline{\textit{Web preglednik}} je program koji korisniku omogućuje pregled web-stranica i multimedijskog sadržaja vezanog uz njih. Korisnik putem web preglednika šalje zahtjev web poslužitelju te mu web preglednik kao interpreter prevodi web-stranicu i njezin sadržaj u format koji je korisniku razumljiv. \\
+		\underline{\textit{Web poslužitelj}} temelj je rada web aplikacije te je njegov glavni zadatak omogućiti komunikaciju klijenta s aplikacijom. Komunikacija se ostvaruje preko protokola HTTP (engl. \textit{Hyper Text Transfer Protocol}), koji služi za prijenos informacija na webu. Web aplikacija se pokreće preko poslužitelja koji joj prosljeđuje zahtjev od strane korisnika. \\
+		\underline{\textit{Web aplikacija}} služi za obradu korisničkih zahtjeva. Ovisno o zahtjevu, web aplikacija tijekom obrade zahtjeva pristupa bazi podataka te korisniku vraća odgovor u obliku HTML (engl. \textit{HyperText Markup Language}) dokumenta koji se prikazuje preko web preglednika. \\
+		Codeshark web aplikacija bazirana je na programskom jeziku Python-u za razvoj \textit{backend}-a, zajedno s JavaScript-om uz biblioteku React za razvoj \textit{frontend}-a. Kao razvojno okruženje koristio se Microsoft Visual Studio. \\
+		Arhitektura sustava temelji se na konceptu MVC-a (Model-View-Controller). Karakteristika MVC koncepta je nezavisan razvoj pojedinih dijelova aplikacije što za posljedicu ima jednostavnije ispitivanje kao i jednostavno razvijanje i dodavanje novih svojstava u sustav. \\
 		\noindent MVC koncept sastoji se od:
 	
 	\begin{itemize}
